--- a/TPC1_BRITEZ/CarroGrid.resx
+++ b/TPC1_BRITEZ/CarroGrid.resx
@@ -117,4 +117,36 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="eliminarBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAMfSURBVHhe7Zs/yM9BHMd/g9FgUBajEWEjSSIpZLKwPGUwCINit9gMBsqiFIPBxOBPBoMdm8Fi
+        YEUpFO9XPVefPl18/933e9fdq1716/f87u59z/P73vfuvvesGo1Go9FIzlZ5Qd6SD+Ur+VF+W5fXvMfP
+        +AyfpUzR7JPX5BNJJ//0lDKUvSr3ymI4Lh/IWKfGyLfjpMyWA/KO/CpjHZjC7/KuPCSzYYO8Ln/IWOjg
+        a3lFnpUH5Ta5cV1e8x4/47Lhs7E6gr8kYwVtL8om+VzGQiIdOSeHDGiUOS//9ctg4NwsF+GofCZjwR7L
+        03IqqIs6Y229lMfkrOyXsZH9gzwlU0HdtOHbJQuZZoG//DvpQ9yT22VqaIO2fPtkIltSdkr/tWdAuiHn
+        vBZpizZp22YhGxmTwIgbG/CYtS3FZenzkDHJ3YFbnW/splwaMvhcZJ0UJjmfpG2E63CxW5CBDH5MICuZ
+        J+O+tA0wEjOByQWy+LsDmSfhhPTT2zWZG2SyGclM9tEw27IVv5G5QjableyjYEn7U4YKf8spZ3hTQzYy
+        hrxkH7WUZmESKkPm5bnj1w70YTBPpa3soswdMtrMbKoMYo9k/R0qYlDZLXOHjHadwmv60htmeKESLOHr
+        H/CXwaDZKhsOthI2M0rBj130pTd+X4/dmlIgq81OX3rDRoOt5LAshSPSZqcvvfFr/h2yC7ZMCrvAktiW
+        oS+9+SJtJVtkF2yZFHaBrLYMfelN9b8Afwl03WmxZVLYBX8JvJW98YMgA0sp+EHwhexNybfBM9JmH3Qb
+        rH4iVP1UmAWEXVRUtxgClpKhIixhOXxJ2syDl8NQ/YYI20n26UtpW2JkH326pOpNUeBYit0ZwhK2xck8
+        2ZGaR9JWXsKDETJPBmdyPkvbQM6Pxsg6+Tmi29I2grk+HB008/sfPHL2AyLm9nicjMkOTzGj8qvEnA5I
+        kG3wrK8rHEh6L23DyHU4xxEZtub8NY9kmu2wVNWHpAJVH5MLVH1QMsCIW+1RWUu1h6U9u2RsvjBW6qTu
+        Yqj2HyZiMKAxY+S6reZfZhqNRqORN6vVX+FktoaUpGnEAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="eliminarTodoBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAFtSURBVHhe7ZqxTcRAFESdENABIQElUAQJOc0RgURIQEhIBUBGSgkUAP9LBKvTirGFZt/69J80
+        0fg0b3125qUoiqIoimIQ55G7yGfkWySveYhcRI6CPPxXpHfYv5K/OYqbkP9874Br8hjZPe+R3uHW5COy
+        ew4Ppdh6/fRsPdDW64dzKDhb7PRGZ4qd3uhMsdMbnSnDwIZ/ofdxAXofF6D3cQF6Hxeg93EBel8K0L0d
+        JUD3dpQA3dtRAnRvRwnQvR0lQPd2lADd21ECdG9HCdC9HSVA93aUAN3bUQJ0b0cJ0L0dJUD3dpQA3dtR
+        AnRvRwnQvR0lQPd2lADd21ECdG9HCdC9HSVA93ZoAXofF6D3cQF6Hxeg95e3SCtwHRnFVaTdfo0MJz9i
+        bCVeIpcRN7nxHGm3kQ8qbyKtBJl0Gc5J5DbSExqZ+8hpBOEs8hTpiY1IvgrpgJOPYL6Haz6H/29yI7eQ
+        x74oiqIoir2zLD8QAX4steSkggAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
